src/objects/Case_Time__c.object
<CustomObject>
    <description>Information related to the time a Case is open and being worked. Will store relevant details such as Case Age, Time with Support, Time with Customer, Time in New Status, calculated not only in true time, but also Business Time, as defined on the Case.</description>
    <fields>
        <fullName>Age_in_Hours__c</fullName>
        <formula>Hours_Included_in_SLA__c +  Hours_Excluded_From_SLA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age in Hours</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Business_Hours_ID__c</fullName>
        <description>Used by Apex Class to determine the difference in business hours. Using the formula fields removes the need for a SOQL query.</description>
        <formula>Case__r.BusinessHoursId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Business Hours ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Closed__c</fullName>
        <formula>If(Case__r.IsClosed, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Closed?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Created_Date__c</fullName>
        <formula>Case__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>TEXT(Case__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Time</relationshipLabel>
        <relationshipName>Case_Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Time_Included_in_AHT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Time Included in AHT?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Time_Included_in_SLA_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the current Case Status is a Stop Status as defined by the Custom Setting. This affects whether the time is considered &quot;Time with Support&quot; or &quot;Time with Customer&quot;


if logged time changes, run is stop status method</description>
        <inlineHelpText>Will default to false for  &quot;Closed - Reply&quot;  as that is only included in SLA if the Case is reopened</inlineHelpText>
        <label>Current Time Included in SLA Time?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Handle_Time__c</fullName>
        <description>The first time the Case is in an AHT Status</description>
        <label>First Handle Time</label>
        <summarizedField>Time_Log__c.In_Effect_Until__c</summarizedField>
        <summaryFilterItems>
            <field>Time_Log__c.New_Case_Status_Included_in_AHT__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Time_Log__c.Case_Time__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hours_Excluded_From_SLA__c</fullName>
        <formula>IF(
     Case__r.IsClosed,
     Logged_Hours_Excluded_From_SLA__c,
     IF ( 
           Current_Time_Included_in_SLA_Time__c,
           Logged_Hours_Excluded_From_SLA__c,
           Logged_Hours_Excluded_From_SLA__c + ((NOW() - Most_Recent_Change__c  )*24)
     )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Excluded From SLA</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Included_in_SLA_After_Handle__c</fullName>
        <formula>Hours_Included_in_SLA__c - Logged_Hours_Until_First_Handle__c</formula>
        <label>Hours Included in SLA After Handle</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Included_in_SLA__c</fullName>
        <formula>IF( 
     Case__r.IsClosed,
     Logged_Hours_Included_in_SLA__c,
     IF (
          Current_Time_Included_in_SLA_Time__c,
          Logged_Hours_Included_in_SLA__c + ((NOW() - Most_Recent_Change__c  )*24),
          Logged_Hours_Included_in_SLA__c
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Included in SLA</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logged_Hours_Excluded_From_SLA__c</fullName>
        <label>Logged Hours Excluded From SLA</label>
        <summarizedField>Time_Log__c.Time_in_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Time_Log__c.Included_in_SLA_Time__c</field>
            <operation>equals</operation>
            <value>FALSE</value>
        </summaryFilterItems>
        <summaryForeignKey>Time_Log__c.Case_Time__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Logged_Hours_Included_in_AHT__c</fullName>
        <label>Logged Hours Included in AHT</label>
        <summarizedField>Time_Log__c.Time_in_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Time_Log__c.Included_in_AHT__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </summaryFilterItems>
        <summaryForeignKey>Time_Log__c.Case_Time__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Logged_Hours_Included_in_SLA__c</fullName>
        <label>Logged Hours Included in SLA</label>
        <summarizedField>Time_Log__c.Time_in_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Time_Log__c.Included_in_SLA_Time__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </summaryFilterItems>
        <summaryForeignKey>Time_Log__c.Case_Time__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Logged_Hours_Until_First_Handle__c</fullName>
        <formula>( First_Handle_Time__c - Case__r.CreatedDate) * 24</formula>
        <label>Logged Hours Until First Handle</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Change__c</fullName>
        <label>Most Recent Change</label>
        <summarizedField>Time_Log__c.In_Effect_Until__c</summarizedField>
        <summaryForeignKey>Time_Log__c.Case_Time__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ultimate_Parent_Case__c</fullName>
        <formula>IF(
       ISBLANK(Case__r.ParentId),
       Case__r.CaseNumber,
       IF(
            ISBLANK(Case__r.Parent.ParentId),
            Case__r.Parent.CaseNumber,
            IF(
                 ISBLANK(Case__r.Parent.Parent.ParentId),
                 Case__r.Parent.Parent.CaseNumber,
                 &quot;More than 2 levels of Parents&quot;
           )
       )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ultimate Parent Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Key</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Case Time</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Case Time Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Times</pluralLabel>
    <recordTypes>
        <fullName>Case_Time</fullName>
        <active>true</active>
        <label>Case Time</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>